# ebump

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ebump/: main.py
